fix: :lipstick: temporarily disable hiding of 'root' breadcrumb on small screens

--- a/styles/notion.css
+++ b/styles/notion.css
@@ -359,7 +359,7 @@
 
   .notion-nav-header div:first-of-type:not(div.breadcrumbs:first-child):not(div.breadcrumbs div:only-child)>*,
   .breadcrumbs .spacer {
-    display: none;
+    /* display: none; */
   }
 
   .notion-page-icon-inline span {
